[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "bump-my-version>=1.3.0",
    "ruff>=0.15.11",
]

# Bump-My-Version
[tool.bumpversion]
commit = true
tag = true
sign_tags = true
allow_dirty = false
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
regex = true
search = "^version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "uv.lock"
search = """
[[package]]
name = "purl-tools"
version = "{current_version}"
"""
replace = """
[[package]]
name = "purl-tools"
version = "{new_version}"
"""
